Fix spacing under .header__title

--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -130,7 +130,7 @@ ul {
 	font-weight: 400;
 	letter-spacing: 0.12em;
 	line-height: 1em;
-  padding-bottom: 0.5em;
+  padding-bottom: 0.25em;
 	text-align: center;
 	word-spacing: 0.16em;
 }
